--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
 Flask-Cors==4.0.0
+flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
@@ -13,7 +14,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+marshmallow==3.21.1
+marshmallow-sqlalchemy==1.0.0
 mysql-connector==2.2.9
+packaging==24.0
 PyMySQL==1.1.0
 python-dotenv==1.0.1
 pytz==2024.1
