--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
 greenlet==3.0.3
+gunicorn==22.0.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
@@ -18,7 +20,9 @@ marshmallow==3.21.1
 marshmallow-sqlalchemy==1.0.0
 mysql-connector==2.2.9
 packaging==24.0
+pluggy==1.4.0
 PyMySQL==1.1.0
+pytest==8.1.1
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
