--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       - "5000:80"
     env_file:
       - .env
-    command: gunicorn --bind 0.0.0.0:80 wsgi:app
     environment:
       - DATABASE_URL=${DATABASE_URL}
     depends_on:
@@ -29,6 +28,7 @@ services:
       - "3307:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD}
+      - MYSQL_DATABASE=${DATABASE_NAME}
     volumes:
       - ./.data:/var/lib/mysql
     networks:
