modifier docker config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SECRET_KEY=yourSecretKey
-DATABASE_URL=mysql+pymysql://user:password@db:3306/ToDo
+SECRET_KEY=secretkey
+DATABASE_URL=mysql+pymysql://root:password@db:3306/ToDo
 FLASK_APP=wsgi
-DATABASE_PASSWORD=yourPassword
+DATABASE_PASSWORD=password
 DATABASE_NAME=ToDo
