added a new column the time in db

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 SECRET_KEY=secretkey
-DATABASE_URL=mysql+pymysql://root:password@db:3306/ToDo
 FLASK_APP=wsgi
 DATABASE_PASSWORD=password
 DATABASE_NAME=ToDo
+DATABASE_NAME_TEST=ToDoTest
+DATABASE_HOST=db
+DATABASE_HOST_TEST=localhost
